# homemade_stereo_obstacle_detection

./: CMakeLists.txt  README.md  extract_image.launch  extract_image.launch~  package.xml  stereoPoints.rviz  stereo_camera.launch~
calibration/camera_stereo/: left.yaml  right.yaml
launch/: camera_stereo.launch~  stereo_obstacle_detection.launch  stereo_obstacle_detection.launch~
params/camera_stereo/: disparity.yaml  disparity.yaml~  logitech_c120.yaml  logitech_c120.yaml~  logitech_c525.yaml  stereo.rviz
src/: stereo_obstacle_detection.cpp  stereo_obstacle_detection_imu.cpp
